--- a/shop/accesorios/index.html
+++ b/shop/accesorios/index.html
@@ -482,7 +482,12 @@
 
                                                         <div class="et_pb_blurb_description">
                                                             <p class="custom-btn-price"><strong>$9.99</strong></p>
-                                                            <p class="custom-btn-comprar"> <div id="payment-btn-1"></div> </p>
+                                                            <p class="custom-btn-comprar">
+                                                                <a class="more btn btn--black" target="" href="https://wa.me/50662609063/?text=">
+                                                                    <span class="text">Comprar</span>
+                                                                    <span class="bg"></span>
+                                                                </a>
+                                                            </p>
                                                         </div>
 
                                                     </div>
@@ -503,7 +508,12 @@
 
                                                         <div class="et_pb_blurb_description">
                                                             <p class="custom-btn-price"><strong>$21.99</strong></p>
-                                                            <p class="custom-btn-comprar"> <div id="payment-btn-2"></div> </p>
+                                                            <p class="custom-btn-comprar">
+                                                                <a class="more btn btn--black" target="" href="https://wa.me/50662609063/?text=">
+                                                                    <span class="text">Comprar</span>
+                                                                    <span class="bg"></span>
+                                                                </a>
+                                                            </p>
                                                         </div>
 
                                                     </div>
@@ -526,7 +536,12 @@
                                                         <h2 class="et_pb_module_header"><span>RAW Clipper Encendedor</span></h2>
                                                         <div class="et_pb_blurb_description">
                                                             <p class="custom-btn-price"><strong>$2.99</strong></p>
-                                                            <p class="custom-btn-comprar"> <div id="payment-btn-3"></div> </p>
+                                                            <p class="custom-btn-comprar">
+                                                                <a class="more btn btn--black" target="" href="https://wa.me/50662609063/?text=">
+                                                                    <span class="text">Comprar</span>
+                                                                    <span class="bg"></span>
+                                                                </a>
+                                                            </p>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -543,7 +558,12 @@
                                                     <h2 class="et_pb_module_header"><span>Encendedor Mini BIC</span></h2>
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>$1.99</strong></p>
-                                                        <p class="custom-btn-comprar"> <div id="payment-btn-4"></div> </p>
+                                                        <p class="custom-btn-comprar">
+                                                            <a class="more btn btn--black" target="" href="https://wa.me/50662609063/?text=">
+                                                                <span class="text">Comprar</span>
+                                                                <span class="bg"></span>
+                                                            </a>
+                                                        </p>
                                                     </div>
                                                 </div>
                                             </div>
@@ -569,7 +589,12 @@
 
                                                         <div class="et_pb_blurb_description">
                                                             <p class="custom-btn-price"><strong>$34.99</strong></p>
-                                                            <p class="custom-btn-comprar"> <div id="payment-btn-5"></div> </p>
+                                                            <p class="custom-btn-comprar">
+                                                                <a class="more btn btn--black" target="" href="https://wa.me/50662609063/?text=">
+                                                                    <span class="text">Comprar</span>
+                                                                    <span class="bg"></span>
+                                                                </a>
+                                                            </p>
                                                         </div>
 
                                                     </div>
@@ -588,7 +613,12 @@
 
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>$49.99</strong></p>
-                                                        <p class="custom-btn-comprar"> <div id="payment-btn-6"></div> </p>
+                                                        <p class="custom-btn-comprar">
+                                                            <a class="more btn btn--black" target="" href="https://wa.me/50662609063/?text=">
+                                                                <span class="text">Comprar</span>
+                                                                <span class="bg"></span>
+                                                            </a>
+                                                        </p>
                                                     </div>
 
                                                 </div>
@@ -606,7 +636,12 @@
                                                     <h2 class="et_pb_module_header"><span>14mm Silicone Honeycomb Bowl - Rainbow</span></h2>
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>$9.99</strong></p>
-                                                        <p class="custom-btn-comprar"> <div id="payment-btn-7"></div> </p>
+                                                        <p class="custom-btn-comprar">
+                                                            <a class="more btn btn--black" target="" href="https://wa.me/50662609063/?text=">
+                                                                <span class="text">Comprar</span>
+                                                                <span class="bg"></span>
+                                                            </a>
+                                                        </p>
                                                     </div>
                                                 </div>
                                             </div>
@@ -623,7 +658,12 @@
                                                     <h2 class="et_pb_module_header"><span>14MM Spotted Egg Glass Male Bowl</span></h2>
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>$9.99</strong></p>
-                                                        <p class="custom-btn-comprar"> <div id="payment-btn-8"></div> </p>
+                                                        <p class="custom-btn-comprar">
+                                                            <a class="more btn btn--black" target="" href="https://wa.me/50662609063/?text=">
+                                                                <span class="text">Comprar</span>
+                                                                <span class="bg"></span>
+                                                            </a>
+                                                        </p>
                                                     </div>
                                                 </div>
                                             </div>
@@ -649,7 +689,12 @@
 
                                                         <div class="et_pb_blurb_description">
                                                             <p class="custom-btn-price"><strong>$9.99</strong></p>
-                                                            <p class="custom-btn-comprar"> <div id="payment-btn-9"></div> </p>
+                                                            <p class="custom-btn-comprar">
+                                                                <a class="more btn btn--black" target="" href="https://wa.me/50662609063/?text=">
+                                                                    <span class="text">Comprar</span>
+                                                                    <span class="bg"></span>
+                                                                </a>
+                                                            </p>
                                                         </div>
 
                                                     </div>
@@ -668,7 +713,12 @@
 
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>$14.20</strong></p>
-                                                        <p class="custom-btn-comprar"> <div id="payment-btn-10"></div> </p>
+                                                        <p class="custom-btn-comprar">
+                                                            <a class="more btn btn--black" target="" href="https://wa.me/50662609063/?text=">
+                                                                <span class="text">Comprar</span>
+                                                                <span class="bg"></span>
+                                                            </a>
+                                                        </p>
                                                     </div>
 
                                                 </div>
@@ -686,7 +736,12 @@
                                                     <h2 class="et_pb_module_header"><span>Herbalist Mini Peanut Pipe</span></h2>
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>$9.99</strong></p>
-                                                        <p class="custom-btn-comprar"> <div id="payment-btn-11"></div> </p>
+                                                        <p class="custom-btn-comprar">
+                                                            <a class="more btn btn--black" target="" href="https://wa.me/50662609063/?text=">
+                                                                <span class="text">Comprar</span>
+                                                                <span class="bg"></span>
+                                                            </a>
+                                                        </p>
                                                     </div>
                                                 </div>
                                             </div>
@@ -703,7 +758,12 @@
                                                     <h2 class="et_pb_module_header"><span>Encendedores Clipper - 4 Pack</span></h2>
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>$5.20</strong></p>
-                                                        <p class="custom-btn-comprar"> <div id="payment-btn-12"></div> </p>
+                                                        <p class="custom-btn-comprar">
+                                                            <a class="more btn btn--black" target="" href="https://wa.me/50662609063/?text=">
+                                                                <span class="text">Comprar</span>
+                                                                <span class="bg"></span>
+                                                            </a>
+                                                        </p>
                                                     </div>
                                                 </div>
                                             </div>
@@ -724,7 +784,12 @@
 
                                                         <div class="et_pb_blurb_description">
                                                             <p class="custom-btn-price"><strong>$5.99</strong></p>
-                                                            <p class="custom-btn-comprar"> <div id=""></div> </p>
+                                                            <p class="custom-btn-comprar">
+                                                                <a class="more btn btn--black" target="" href="https://wa.me/50662609063/?text=">
+                                                                    <span class="text">Comprar</span>
+                                                                    <span class="bg"></span>
+                                                                </a>
+                                                            </p>
                                                         </div>
 
                                                     </div>
@@ -742,7 +807,12 @@
 
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>$3.99</strong></p>
-                                                        <p class="custom-btn-comprar"> <div id=""></div> </p>
+                                                        <p class="custom-btn-comprar">
+                                                            <a class="more btn btn--black" target="" href="https://wa.me/50662609063/?text=">
+                                                                <span class="text">Comprar</span>
+                                                                <span class="bg"></span>
+                                                            </a>
+                                                        </p>
                                                     </div>
 
                                                 </div>
@@ -760,7 +830,12 @@
                                                         <h2 class="et_pb_module_header"><span>RAW Organic Hemp Papers 1 1/4</span></h2>
                                                         <div class="et_pb_blurb_description">
                                                             <p class="custom-btn-price"><strong>$4.99</strong></p>
-                                                            <p class="custom-btn-comprar"> <div id=""></div> </p>
+                                                            <p class="custom-btn-comprar">
+                                                                <a class="more btn btn--black" target="" href="https://wa.me/50662609063/?text=">
+                                                                    <span class="text">Comprar</span>
+                                                                    <span class="bg"></span>
+                                                                </a>
+                                                            </p>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -779,7 +854,12 @@
                                                         <h2 class="et_pb_module_header"><span>Juicy Jay's - Strawberry</span></h2>
                                                         <div class="et_pb_blurb_description">
                                                             <p class="custom-btn-price"><strong>$5.79</strong></p>
-                                                            <p class="custom-btn-comprar"> <div id=""></div> </p>
+                                                            <p class="custom-btn-comprar">
+                                                                <a class="more btn btn--black" target="" href="https://wa.me/50662609063/?text=">
+                                                                    <span class="text">Comprar</span>
+                                                                    <span class="bg"></span>
+                                                                </a>
+                                                            </p>
                                                         </div>
                                                     </div>
                                                 </div>
