--- a/shop/picadoras/index.html
+++ b/shop/picadoras/index.html
@@ -475,7 +475,12 @@
 
                                                         <div class="et_pb_blurb_description">
                                                             <p class="custom-btn-price"><strong>$59.99</strong></p>
-                                                            <p class="custom-btn-comprar"> <div id="paypal-pink-mod-bong"></div> </p>
+                                                            <p class="custom-btn-comprar">
+                                                                <a class="more btn btn--black" target="" href="https://wa.me/50662609063/?text=">
+                                                                    <span class="text">Comprar</span>
+                                                                    <span class="bg"></span>
+                                                                </a>
+                                                            </p>
                                                         </div>
 
                                                     </div>
@@ -494,7 +499,12 @@
 
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>$30.00</strong></p>
-                                                        <p class="custom-btn-comprar"> <div id="paypal-mod-bong-7in"></div> </p>
+                                                        <p class="custom-btn-comprar">
+                                                            <a class="more btn btn--black" target="" href="https://wa.me/50662609063/?text=">
+                                                                <span class="text">Comprar</span>
+                                                                <span class="bg"></span>
+                                                            </a>
+                                                        </p>
                                                     </div>
 
                                                 </div>
@@ -512,7 +522,12 @@
                                                     <h2 class="et_pb_module_header"><span>Vibes 4-Piece Grinder (2.5") - Black</span></h2>
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>$40.00</strong></p>
-                                                        <p class="custom-btn-comprar"> <div id="paypal-multi-colored-perc-bong"></div> </p>
+                                                        <p class="custom-btn-comprar">
+                                                            <a class="more btn btn--black" target="" href="https://wa.me/50662609063/?text=">
+                                                                <span class="text">Comprar</span>
+                                                                <span class="bg"></span>
+                                                            </a>
+                                                        </p>
                                                     </div>
                                                 </div>
                                             </div>
@@ -529,7 +544,12 @@
                                                     <h2 class="et_pb_module_header"><span>Goody Glass - Big Face Travel Size Grinder - Pink</span></h2>
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>$29.99</strong></p>
-                                                        <p class="custom-btn-comprar"> <div id="paypal-soft-serve-bong-9in"></div> </p>
+                                                        <p class="custom-btn-comprar">
+                                                            <a class="more btn btn--black" target="" href="https://wa.me/50662609063/?text=">
+                                                                <span class="text">Comprar</span>
+                                                                <span class="bg"></span>
+                                                            </a>
+                                                        </p>
                                                     </div>
                                                 </div>
                                             </div>
@@ -555,7 +575,12 @@
 
                                                         <div class="et_pb_blurb_description">
                                                             <p class="custom-btn-price"><strong>$19.99</strong></p>
-                                                            <p class="custom-btn-comprar"> <div id="paypal-pink-mod-bong"></div> </p>
+                                                            <p class="custom-btn-comprar">
+                                                                <a class="more btn btn--black" target="" href="https://wa.me/50662609063/?text=">
+                                                                    <span class="text">Comprar</span>
+                                                                    <span class="bg"></span>
+                                                                </a>
+                                                            </p>
                                                         </div>
 
                                                     </div>
@@ -574,7 +599,12 @@
 
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>$39.99</strong></p>
-                                                        <p class="custom-btn-comprar"> <div id="paypal-mod-bong-7in"></div> </p>
+                                                        <p class="custom-btn-comprar">
+                                                            <a class="more btn btn--black" target="" href="https://wa.me/50662609063/?text=">
+                                                                <span class="text">Comprar</span>
+                                                                <span class="bg"></span>
+                                                            </a>
+                                                        </p>
                                                     </div>
 
                                                 </div>
@@ -592,7 +622,12 @@
                                                     <h2 class="et_pb_module_header"><span>Rico Nasty Keeper™ - Black</span></h2>
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>$17.99</strong></p>
-                                                        <p class="custom-btn-comprar"> <div id="paypal-multi-colored-perc-bong"></div> </p>
+                                                        <p class="custom-btn-comprar">
+                                                            <a class="more btn btn--black" target="" href="https://wa.me/50662609063/?text=">
+                                                                <span class="text">Comprar</span>
+                                                                <span class="bg"></span>
+                                                            </a>
+                                                        </p>
                                                     </div>
                                                 </div>
                                             </div>
@@ -609,7 +644,12 @@
                                                     <h2 class="et_pb_module_header"><span>Marley Grinder Wood</span></h2>
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>$48.00</strong></p>
-                                                        <p class="custom-btn-comprar"> <div id="paypal-soft-serve-bong-9in"></div> </p>
+                                                        <p class="custom-btn-comprar">
+                                                            <a class="more btn btn--black" target="" href="https://wa.me/50662609063/?text=">
+                                                                <span class="text">Comprar</span>
+                                                                <span class="bg"></span>
+                                                            </a>
+                                                        </p>
                                                     </div>
                                                 </div>
                                             </div>
