--- a/cbd/index.html
+++ b/cbd/index.html
@@ -571,7 +571,12 @@
                                                         <div class="et_pb_blurb_description">
                                                             <p class="custom-btn-price">Espectro completo</p>
                                                             <p class="custom-btn-price"><strong>$61.48</strong></p>
-                                                            <p class="custom-btn-comprar"> <div id="payment-btn-1"></div> </p>
+                                                            <p class="custom-btn-comprar">
+                                                                <a class="more btn btn--black" target="" href="https://wa.me/50662609063/?text=">
+                                                                    <span class="text">Comprar</span>
+                                                                    <span class="bg"></span>
+                                                                </a>
+                                                            </p>
                                                         </div>
 
                                                     </div>
@@ -591,7 +596,12 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price">Alta potencia sin THC</p>
                                                         <p class="custom-btn-price"><strong>$61.48</strong></p>
-                                                        <p class="custom-btn-comprar"> <div id="payment-btn-2"></div> </p>
+                                                        <p class="custom-btn-comprar">
+                                                            <a class="more btn btn--black" target="" href="https://wa.me/50662609063/?text=">
+                                                                <span class="text">Comprar</span>
+                                                                <span class="bg"></span>
+                                                            </a>
+                                                        </p>
                                                     </div>
 
                                                 </div>
@@ -610,7 +620,12 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price">Espectro completo</p>
                                                         <p class="custom-btn-price"><strong>$121.38</strong></p>
-                                                        <p class="custom-btn-comprar"> <div id="payment-btn-3"></div> </p>
+                                                        <p class="custom-btn-comprar">
+                                                            <a class="more btn btn--black" target="" href="https://wa.me/50662609063/?text=">
+                                                                <span class="text">Comprar</span>
+                                                                <span class="bg"></span>
+                                                            </a>
+                                                        </p>
                                                     </div>
                                                 </div>
                                             </div>
@@ -628,7 +643,12 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price">Espectro completo</p>
                                                         <p class="custom-btn-price"><strong>$121.38</strong></p>
-                                                        <p class="custom-btn-comprar"> <div id="payment-btn-4"></div> </p>
+                                                        <p class="custom-btn-comprar">
+                                                            <a class="more btn btn--black" target="" href="https://wa.me/50662609063/?text=">
+                                                                <span class="text">Comprar</span>
+                                                                <span class="bg"></span>
+                                                            </a>
+                                                        </p>
                                                     </div>
                                                 </div>
                                             </div>
@@ -652,7 +672,12 @@
                                                         <div class="et_pb_blurb_description">
                                                             <p class="custom-btn-price">Espectro completo</p>
                                                             <p class="custom-btn-price"><strong>$162.36</strong></p>
-                                                            <p class="custom-btn-comprar"> <div id="payment-btn-5"></div> </p>
+                                                            <p class="custom-btn-comprar">
+                                                                <a class="more btn btn--black" target="" href="https://wa.me/50662609063/?text=">
+                                                                    <span class="text">Comprar</span>
+                                                                    <span class="bg"></span>
+                                                                </a>
+                                                            </p>
                                                         </div>
 
                                                     </div>
@@ -672,7 +697,12 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price">Espectro completo</p>
                                                         <p class="custom-btn-price"><strong>$162.36</strong></p>
-                                                        <p class="custom-btn-comprar"> <div id="payment-btn-6"></div> </p>
+                                                        <p class="custom-btn-comprar">
+                                                            <a class="more btn btn--black" target="" href="https://wa.me/50662609063/?text=">
+                                                                <span class="text">Comprar</span>
+                                                                <span class="bg"></span>
+                                                            </a>
+                                                        </p>
                                                     </div>
 
                                                 </div>
@@ -691,7 +721,12 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price">Espectro completo</p>
                                                         <p class="custom-btn-price"><strong>$231.72</strong></p>
-                                                        <p class="custom-btn-comprar"> <div id="payment-btn-7"></div> </p>
+                                                        <p class="custom-btn-comprar">
+                                                            <a class="more btn btn--black" target="" href="https://wa.me/50662609063/?text=">
+                                                                <span class="text">Comprar</span>
+                                                                <span class="bg"></span>
+                                                            </a>
+                                                        </p>
                                                     </div>
                                                 </div>
                                             </div>
@@ -708,7 +743,12 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price">Espectro completo</p>
                                                         <p class="custom-btn-price"><strong>$231.72</strong></p>
-                                                        <p class="custom-btn-comprar"> <div id="payment-btn-8"></div> </p>
+                                                        <p class="custom-btn-comprar">
+                                                            <a class="more btn btn--black" target="" href="https://wa.me/50662609063/?text=">
+                                                                <span class="text">Comprar</span>
+                                                                <span class="bg"></span>
+                                                            </a>
+                                                        </p>
                                                     </div>
                                                 </div>
                                             </div>
